--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: go
+
+env:
+  global:
+    secure: M9MCEV+XKC4fc/cXWq7jacjWtXR2xjG4ggr6CfT6lpVf8GaOmLUzlbuKUASQaMtiZrlpDqHKgOAonLTIXs2cIbGzWOr0SHV8Ob808buDP/oZhztT7YgB9dadZ2ONCATL/70IAWmpkDwkYQYXkvpiJ0T/7v4ncl/exUBLKvZT+FQ=
 go:
     - 1.3
     - tip
     - release
 
-install: go get
+install: 
+    - go get
+    - go get github.com/axw/gocov/gocov
+    - go get github.com/mattn/goveralls
+
+script:
+    - go test -v -covermode=count -coverprofile=coverage.out
+    - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
