--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 
 install: 
     - go get
-    - go get github.com/axw/gocov/gocov
+    - go get code.google.com/p/go.tools/cmd/cover
     - go get github.com/mattn/goveralls
 
 script:
