--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ go:
 install: 
     - go get
     - go get golang.org/x/tools/cmd/cover
+    - go get code.google.com/p/go.tools/cmd/cover
     - go get github.com/mattn/goveralls
 
 script:
