--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ go:
 
 install: 
     - go get
-    - go get golang.org/x/tools/cmd/cover
-    - go get code.google.com/p/go.tools/cmd/cover
+    - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
     - go get github.com/mattn/goveralls
 
 script:
